<resources>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="donotes">Do-Notes</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="title">Title</string>
    <string name="type_something">Type Something....</string>
    <string name="save">Save</string>
    <string name="add_owner">Add owner</string>
</resources>