<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clNoteContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mediumDarkBackground"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/ic_back"
        android:paddingStart="10dp"
        android:background="@drawable/add_edit_note_btn_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:fontFamily="@font/noto_sans_medium"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/add_edit_note_btn_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <View
        android:id="@+id/viewNoteColor"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/circle_shape"
        app:layout_constraintBottom_toBottomOf="@id/etNoteTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/etNoteTitle" />

    <EditText
        android:id="@+id/etNoteTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/title"
        android:textColor="@color/white"
        android:fontFamily="@font/noto_sans_bold"
        android:padding="12dp"
        android:saveEnabled="true"
        android:textColorHint="@android:color/tertiary_text_dark"
        app:layout_constraintEnd_toStartOf="@+id/viewNoteColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back" />

    <EditText
        android:id="@+id/etNoteContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/type_something"
        android:fontFamily="@font/noto_sans_regular"
        android:inputType="textMultiLine"
        android:textColor="@color/white"
        android:padding="16dp"
        android:gravity="top"
        android:background="@null"
        android:saveEnabled="true"
        android:textColorHint="@android:color/tertiary_text_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNoteTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>